syntax = "proto3";

package collaboration;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

service Collaboration {
    rpc JoinRoom(JoinRoomRequest) returns (stream ConnectionResponse) {
        option (google.api.http) = {
            post: "/collab/{workspaceId}/join"
            body: "*"
        };
    }

    rpc GetRoom(GetRoomRequest) returns (GetRoomResponse) {
        option (google.api.http) = {
            get: "/collab/{workspaceId}/room"
        };
    }

    rpc GetRoomDrawing(GetRoomRequest) returns (GetRoomDrawingResponse) {
        option (google.api.http) = {
            get: "/collab/{workspaceId}/drawing"
        };
    
    }

    rpc UpdateExcalidraw(UpdateExcalidrawRequest) returns (Empty) {
        option (google.api.http) = {
            post: "/collab/{workspaceId}/drawing"
            body: "*"
        };
    }

    rpc UploadImageFile(UploadImageFileRequest) returns (Empty) {
        option (google.api.http) = {
            post: "/collab/{workspaceId}/image"
            body: "*"
        };
    }

}

message Empty {}

message UploadImageFileRequest {
    int32 workspaceId = 1;
    string fileID = 2;
    string fileMimeType = 3;
    string fileData = 4;
}


message UpdateExcalidrawRequest {
    int32 workspaceId = 1;
    CollaborationAction action = 2;
    string data = 3;
}

message GetRoomDrawingResponse {
    string data = 1;
    string imageData = 2;
}

message JoinRoomRequest {
    int32 workspaceId = 1;
    string userId = 2;
}

message ConnectionResponse {
    CollaborationAction action = 1;
    string data = 2;
}

message GetRoomRequest {
    int32 workspaceId = 1;
} 

message GetRoomResponse {
    repeated string users = 1;
}

enum CollaborationAction {
    UPDATE_CONNECTION = 0;
    ADD_ELEMENT = 1;
    UPDATE_ELEMENT = 2;
    DELETE_ELEMENT = 3;
    ADD_IMAGE = 4;
}

