// Original file: proto/collaboration.proto


export interface UploadImageFileRequest {
  'workspaceId'?: (number);
  'fileID'?: (string);
  'fileMimeType'?: (string);
  'fileData'?: (string);
}

export interface UploadImageFileRequest__Output {
  'workspaceId'?: (number);
  'fileID'?: (string);
  'fileMimeType'?: (string);
  'fileData'?: (string);
}
